--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge 17 - Color Generator</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="app.js" type="module" defer></script>
-  </head>
-  <body>
-    <header>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Challenge 17 - Color Generator</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="app.js" type="module" defer></script>
+</head>
+
+<body>
+  <header>
+    <div class="wrapper">
       <form>
         <input type="text" placeholder="#f15025" autofocus />
       </form>
-    </header>
-    <main></main>
-  </body>
+
+      <div class="wrapper__mode">
+
+        <label for="huey">Complémentaire
+          <input id="complementary" type="radio" name="mode" value="complementary" checked>
+        </label>
+
+        <label for="dewey">Analogue
+          <input id="analogous" type="radio" name="mode" value="analogous">
+        </label>
+
+        <label for="louie">Triade
+          <input id="triadic" type="radio" name="mode" value="triadic">
+        </label>
+      </div>
+
+    </div>
+  </header>
+  <main></main>
+</body>
+
 </html>
