feat: palette display completed

--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,20 @@
   <header>
     <div class="wrapper">
       <form>
-        <input type="text" placeholder="#f15025" autofocus />
+        <input type="text" placeholder="#f15025" value="#f15025" autofocus />
       </form>
 
       <div class="wrapper__mode">
 
-        <label for="huey">Complémentaire
+        <label>Complémentaire
           <input id="complementary" type="radio" name="mode" value="complementary" checked>
         </label>
 
-        <label for="dewey">Analogue
+        <label>Analogue
           <input id="analogous" type="radio" name="mode" value="analogous">
         </label>
 
-        <label for="louie">Triade
+        <label>Triade
           <input id="triadic" type="radio" name="mode" value="triadic">
         </label>
       </div>
