--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="wrapper">
       <form>
-        <input type="text" placeholder="#f15025" value="#f15025" autofocus />
+        <input type="text" placeholder="#f15025" autofocus />
       </form>
 
       <div class="wrapper__mode">
